fix bug #53432 (Assignment via string index access on an empty string converts to array)

see https://bugs.php.net/bug.php?id=53432

- Assignment via string index on an empty string will produce a Illegal string offset
warning now.

- Split Zend/tests/indexing_001.phpt into multiple files for readability improvement.